--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -127,14 +127,21 @@ th.game-header-cell {
 
 td.game-left-row-cell {
   text-align: left;
-  background-color: #ffffff;
   color: #000000;
+  width: fit-content;
 }
 
-td.game-other-row-cell {
-  text-align: center;
-  background-color: #ffffff;
+td.all-left-row-cell {
+  text-align: left;
   color: #000000;
+  width: 300px;
+}
+
+td.game-other-row-cell,
+td.all-other-row-cell {
+  text-align: center;
+  color: #000000;
+  padding: 4px 1px 1px 4px;
 }
 
 /* Lineup */
@@ -158,6 +165,9 @@ table.lineup-table,
 
 #help-table {
   width: 100%;
+}
+table {
+  border-spacing: 0px;
 }
 
 table.team-table {
@@ -217,6 +227,17 @@ td.team-card-col-player,
 div.team-card-col-players,
 span.team-card-col-players {
   text-align: left;
+}
+
+td:nth-child(1),
+td:nth-child(3n + 4) {
+  border-right: 2px solid #000;
+}
+
+.tr--shaded,
+.th--shaded,
+.td--shaded {
+  background-color: #d9d9d9;
 }
 
 .select-dropdown-container {
